Fix navigation bar + re-align title

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -228,8 +228,9 @@ body {
   top: 50vh;
   left: 0.5em;
   
-  min-width: 1rem;
-  padding: 1rem !important;
+  min-width: 40px !important;
+  padding: 5px !important;
+  margin: 0px !important;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.2) !important;
 }
 
@@ -283,14 +284,18 @@ body {
 }
 
 .title {
+  display: block;
   font-weight: bold;
   letter-spacing: 0.05rem;
   font-size: 1.5rem;
   align-self: center;
+  text-align: center;
 
   padding-right: 2rem;
+  padding-left: 2rem;
   border-right: 2px solid;
-  border-image-slice: 1;
+  border-left: 2px solid;
+  border-image-slice: 2;
   border-image-source: linear-gradient(
     to bottom,
     var(--main) 0%,
@@ -342,6 +347,7 @@ body {
 
   &.upper {
     padding-left: 80px;
+    text-align: left;
 
     &::before {
       content: '';
@@ -356,6 +362,7 @@ body {
 
   &.lower {
     padding-right: 80px;
+    text-align: right;
 
     &::before {
       content: '';
@@ -391,7 +398,9 @@ body {
 }
 
 .wrapper-box {
-  display: inline-flex;
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
   padding: 3.5rem;
   width: 100%;
 
@@ -628,6 +637,7 @@ body {
   margin-top: 3rem;
   padding-top: 2rem;
 
+  text-align: center;
   background-image: linear-gradient(90deg, var(--sub), var(--sub));
   background-position: 50% 0%;
   background-repeat: no-repeat;
